// Music ERD v2 — paste into dbdiagram.io
// status: pending, processing, completed, failed
// 3NF: user_vocal_recordings has mr_search_list_id only

TableGroup logical [color: #EEEEEE] {
  catalog_songs
}

Table catalog_songs {
  catalog_song_id varchar(64) [pk]
  title varchar(255)
  artist varchar(255)
  bpm int
  song_key varchar(64)
  range_label varchar(255)
  mr_track_name varchar(512)
  mr_description varchar(1024)
  Note: 'In-memory catalog.py only'
}

Table users {
  id bigint [pk, increment]
  username varchar(255) [not null]
  nickname varchar(255)
  email varchar(255)
  role int [not null, default: 0]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

Table song_mr_search_lists {
  id bigint [pk, increment]
  search_query varchar(512) [not null]
  catalog_song_id varchar(64) [not null]
  title varchar(255) [not null]
  artist varchar(255) [not null]
  bpm int [not null]
  song_key varchar(64) [not null]
  range_label varchar(255) [not null]
  mr_track_name varchar(512) [not null]
  mr_description varchar(1024) [not null]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

Table sing_evaluations {
  id bigint [pk, increment]
  user_id bigint
  status varchar(32) [not null, default: 'pending']
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

Table user_vocal_recordings {
  id bigint [pk, increment]
  user_id bigint
  mr_search_list_id bigint
  sing_evaluation_id bigint [unique, not null]
  input_source varchar(16) [not null]
  file_name varchar(512) [not null]
  duration_sec int [not null, default: 0]
  content_type varchar(128)
  storage_uri varchar(1024)
  status varchar(32) [not null, default: 'pending']
  recorded_at timestamptz
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

Table ai_vocal_analyses {
  id bigint [pk, increment]
  user_vocal_recording_id bigint [unique, not null]
  analysis_engine varchar(32) [not null]
  pitch_score int [not null]
  rhythm_score int [not null]
  vocal_grade varchar(32) [not null]
  summary varchar(2048) [not null]
  status varchar(32) [not null, default: 'pending']
  analyzed_at timestamptz
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

Table vocal_recommendations {
  id bigint [pk, increment]
  sing_evaluation_id bigint [not null]
  ai_vocal_analysis_id bigint [not null]
  vocalization_pattern varchar(1024) [not null]
  recommended_genres json [not null]
  recommended_songs json [not null]
  status varchar(32) [not null, default: 'pending']
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

Table instrument_evaluations {
  id bigint [pk, increment]
  user_id bigint
  status varchar(32) [not null, default: 'pending']
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

Table instrument_recordings {
  id bigint [pk, increment]
  user_id bigint
  instrument_evaluation_id bigint [unique, not null]
  instrument_id varchar(32) [not null]
  file_name varchar(512) [not null]
  duration_sec int [not null, default: 0]
  status varchar(32) [not null, default: 'pending']
  recorded_at timestamptz
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

Table instrument_tuning_analyses {
  id bigint [pk, increment]
  instrument_recording_id bigint [unique, not null]
  analysis_engine varchar(64) [not null]
  tuning_accuracy int [not null]
  pitch_deviation_cents int [not null]
  summary varchar(2048) [not null]
  string_readings json [not null]
  status varchar(32) [not null, default: 'pending']
  analyzed_at timestamptz
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

Table speech_evaluations {
  id bigint [pk, increment]
  user_id bigint
  status varchar(32) [not null, default: 'pending']
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

Table speech_recordings {
  id bigint [pk, increment]
  user_id bigint
  speech_evaluation_id bigint [unique, not null]
  topic_id varchar(64) [not null]
  file_name varchar(512) [not null]
  duration_sec int [not null, default: 0]
  status varchar(32) [not null, default: 'pending']
  recorded_at timestamptz
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

Table speech_feedback_analyses {
  id bigint [pk, increment]
  speech_recording_id bigint [unique, not null]
  analysis_engine varchar(64) [not null]
  clarity_score int [not null]
  pace_score int [not null]
  tone_score int [not null]
  summary varchar(2048) [not null]
  feedback_points json [not null]
  status varchar(32) [not null, default: 'pending']
  analyzed_at timestamptz
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

Ref: song_mr_search_lists.catalog_song_id > catalog_songs.catalog_song_id
Ref: sing_evaluations.user_id > users.id
Ref: user_vocal_recordings.user_id > users.id
Ref: user_vocal_recordings.mr_search_list_id > song_mr_search_lists.id
Ref: user_vocal_recordings.sing_evaluation_id - sing_evaluations.id
Ref: ai_vocal_analyses.user_vocal_recording_id - user_vocal_recordings.id
Ref: vocal_recommendations.sing_evaluation_id > sing_evaluations.id
Ref: vocal_recommendations.ai_vocal_analysis_id > ai_vocal_analyses.id
Ref: instrument_evaluations.user_id > users.id
Ref: instrument_recordings.user_id > users.id
Ref: instrument_recordings.instrument_evaluation_id - instrument_evaluations.id
Ref: instrument_tuning_analyses.instrument_recording_id - instrument_recordings.id
Ref: speech_evaluations.user_id > users.id
Ref: speech_recordings.user_id > users.id
Ref: speech_recordings.speech_evaluation_id - speech_evaluations.id
Ref: speech_feedback_analyses.speech_recording_id - speech_recordings.id
